syntax = "proto3";

package transport_catalogue;

message Edge {
    uint32 from = 1;
    uint32 to = 2;
    double weight = 3;
}

message EdgeId {
    uint32 id = 1;
}

message Graph {
    repeated Edge edges = 1;
    uint32 vertex_count = 2;
}

message RouteInternalData {
    double weight = 1;
    EdgeId prev_edge = 2;
}

message OptionalRouteInternalData {
    RouteInternalData route_internal_data = 1;
}

message VectorRouteInternalData {
    repeated OptionalRouteInternalData optional = 1;
}

message Router {
    repeated VectorRouteInternalData vector = 1;
}